--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
 jobs:
   build:
 
@@ -33,3 +36,4 @@ jobs:
       run: |
         coverage run -m pytest tests/*_test.py
         coverage report
+        coveralls --service=github
