--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        coverage run -m pytest tests/*_test.py
+        coverage run --source=. -m pytest tests/*_test.py
         coverage report
         coveralls --service=github
